# Labs-1-course

1 semestr/Additional_1/: CMakeLists.txt
1 semestr/Additional_3/: Function.cpp  main.cpp
1 semestr/Additional_4/: CMakeLists.txt
1 semestr/Additional_7/: CMakeLists.txt
1 semestr/Additional_8/: Source.cpp
1 semestr/Lab_10/: Header.hpp  Source.cpp
2 semestr/Additional_1/: Additional_1.cpp  CMakeLists.txt
2 semestr/Additional_2/: Additional_2.cpp  CMakeLists.txt  Оценка сложности сортировки слиянием.docx
2 semestr/Additional_3/: Additional_3.cpp  CMakeLists.txt  Header.hpp  Source.cpp
2 semestr/Additional_4/: BMP.cpp  BMP.hpp  CMakeLists.txt  main.cpp
2 semestr/Additional_5/: Additional_5.cpp  CMakeLists.txt  main.cpp
2 semestr/Lab_1/: CMakeLists.txt  Lab_1.cpp
2 semestr/Lab_10/: BMP.cpp  CMakeLists.txt  main.cpp
2 semestr/Lab_11/: main.cpp
2 semestr/Lab_12/: CMakeLists.txt  Lab_12.cpp  main.cpp
2 semestr/Lab_13/: CMakeLists.txt  main.cpp
2 semestr/Lab_2/: CMakeLists.txt  (+2 more)
Additional_10/: Setup - test.iss
Additional_3/: CMakeLists.txt  Function.hpp
Additional_5/: Additional_5.cpp  CMakeLists.txt
Additional_7/: Additional_7.cpp
Additional_8/: Additional_8.cpp  CMakeLists.txt  Header.hpp
Lab_10/: CMakeLists.txt  main.cpp
Lab_10 — копия/: CMakeLists.txt
Lab_11/: CMakeLists.txt  Header.hpp  Lab_11.cpp  Source.cpp
Lab_7/: CMakeLists.txt  README.md  functions.cpp
Lab_8_2/: CMakeLists.txt  Lab_8_2.cpp  numbers_out3.txt
Lab_9/: CMakeLists.txt  main.cpp
Project/: CMakeLists.txt  Header.hpp  Project.cpp  Source.cpp  Source.hpp
(+42 files in other folders)
